--- a/leelacasting/leelacastingModel/pom.xml
+++ b/leelacasting/leelacastingModel/pom.xml
@@ -39,6 +39,30 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>javax.persistence</groupId>
+   			 <artifactId>javax.persistence-api</artifactId>
+   			 <version>2.2</version>
+		</dependency>
+
+		<dependency>
+   			 <groupId>org.hibernate</groupId>
+   			 <artifactId>hibernate-core</artifactId>
+   			 <version>5.4.33.Final</version>
+		</dependency>
+
+		<dependency>
+  			<groupId>javax.validation</groupId>
+    		<artifactId>validation-api</artifactId>
+   			<version>2.0.1.Final</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+    		<artifactId>hibernate-validator</artifactId>
+    		<version>6.2.3.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
