--- a/leelacasting/leelacastingService/src/main/resources/application.properties
+++ b/leelacasting/leelacastingService/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=leelacastingService
+spring.datasource.url=jdbc:mysql://localhost:3306/leelacasting
+spring.datasource.username=vijaya
+spring.datasource.password=MySQL9150.@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+
