--- a/leelacasting/leelacastingService/pom.xml
+++ b/leelacasting/leelacastingService/pom.xml
@@ -138,6 +138,13 @@
     		<artifactId>hibernate-validator</artifactId>
     		<version>6.2.3.Final</version>
 		</dependency>
+		<dependency>
+      		<groupId>org.springframework.data</groupId>
+      		<artifactId>spring-data-bom</artifactId>
+      		<version>2024.0.4</version>
+      		<scope>import</scope>
+      		<type>pom</type>
+    	</dependency>
 
 
 		<dependency>
